HTML 40% complete notes

--- a/notes.html
+++ b/notes.html
@@ -4,6 +4,43 @@
     <title>Getting Started with HTML</title>
   </head>
   <body>
-    
+    <h1> The Basics of the Web - Unit 1 </h1>
+    <ul>
+      <li>The Web</li>
+      <li>HTML</li>
+      <li>Urls</li>
+      <li>HTTP</li>
+      <li>Web Applications</li>
+    </ul>
+
+    <h2>World Wide Web</h2>
+    <p>WWW is a collection of HTML documents</p>
+    <p> <b>HTML</b> stands for Hypertext markup language<br>
+      Hyper <a href="">links</a> are used to connect all the documents.<br>
+    <em>Invented in 1990's</em> and has <strong>30 Billion</strong> pages.</p>
+    <br>
+    <h2>Components of the Web</h2>
+    <p> There are 4 Components of the web:<br>
+    Browser <br>
+    Internet<br>
+    HTTP<br>
+    Servers
+    </p>
+    Browser uses internet and requests for a HTML document. The internet uses HTTP(<em>Hypertext transfer protocol</em>) to request and fetch HTML documents from servers.<br>
+    Servers are just computers but designed to store and transfer HTML documents not like our personal desktop to view the documents.
+
+
+    <div>
+      <h2>HTML(Hypertext markup language)</h2>
+      made up of
+      <ul>
+        <li>text content - what you see</li>
+        <li>markup - what it looks like</li>
+        <li>references to other documents - eg images and videos</li>
+        <li>links to other pages</li>
+      </ul>
+    </div>
+
+    <span> <b>HTML Markup</b> </span> - <em>Tags</em>
   </body>
 </html>
