--- a/notes.html
+++ b/notes.html
@@ -42,5 +42,28 @@
     </div>
 
     <span> <b>HTML Markup</b> </span> - <em>Tags</em>
+    <p> An HTML element comprises of an opening tag and a closing tag and content in between the tags.</p>
+    <p>b stands for <b>bold</b>.  em stands for <em>italics.</em> </p>
+
+
+    <div>
+      <h2>HTML Attributes</h2>
+      <p>anchor tag href attribute to link to other pages such as udacity.com or reddit.com.</p>
+      <p> Image tag has multiple attributes such as src which refers to url of the image and alt which is alternate text and is required for broken requests or blind. <p>
+      <p> It is a void tag and doesn't have a closing tag and content. </p>
+    </div>
+
+    <div>
+      <h2>Whitespaces</h2>
+      <p>inline and block: inline is in the line whereas block wraps an invisible container around the element.</p>
+    </div>
+
+    <div>
+      <h2>Structure of HTML document</h2>
+      <p>!DOCTYPE HTML refers to the type of the document here it is html and there are many different doc types.</p>
+      <p>html tag contains the whole html document</p>
+      <p>head tag contains the metadata, js and css of the html document</p>
+      <p>body tag contains the content of the hmtl document which is displayed.</p>
+    </div>
   </body>
 </html>
