--- a/notes.html
+++ b/notes.html
@@ -65,5 +65,22 @@
       <p>head tag contains the metadata, js and css of the html document</p>
       <p>body tag contains the content of the hmtl document which is displayed.</p>
     </div>
+
+
+    <div class="summary">
+      <h2>Summary of unit-2 Web</h2>
+      <p>
+        HTML documents have tree like Structure each element have content or other tags as their childs.
+        Chrome developer tools are the best thing for a web developer it can be used to optimise a website or look into style sheets or the structure of the webpage.
+      </p>
+      <p>
+        HTML - CSS - DOM <br>
+        HTML is a language and has its own syntax and rules. CSS is also an language to provide design to the HTML file. DOM is termed as Document Object Model which creates the tree structure for the html document.
+      </p>
+      <p>
+        Boxify the design : We should think of boxes and try to make as many boxes to make any design. Every thing in html file is a box even circle, ovals are inside a box.
+        First we should make boxes around outer design and then make boxes around inner elements.
+      </p>
+    </div>
   </body>
 </html>
