--- a/css-demo/app.html
+++ b/css-demo/app.html
@@ -1,5 +1,14 @@
-<div class="title">My App</div>
-<div class="app">
-  <div class="screenshot">image</div>
-  <div class="description">text</div>
-</div>
+
+<!DOCTYPE html>
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+  <head>
+  </head>
+  <body>
+    <div class="title">My App</div>
+    <div class="app">
+      <div class="screenshot">image</div>
+      <div class="description">text</div>
+    </div>
+  </body>
+</html>
