--- a/notes.html
+++ b/notes.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link rel="stylesheet" href="/css-demo/style.css">
     <title>Getting Started with HTML</title>
   </head>
   <body>
@@ -26,9 +27,9 @@
     HTTP<br>
     Servers
     </p>
-    Browser uses internet and requests for a HTML document. The internet uses HTTP(<em>Hypertext transfer protocol</em>) to request and fetch HTML documents from servers.<br>
-    Servers are just computers but designed to store and transfer HTML documents not like our personal desktop to view the documents.
-
+    <p>Browser uses internet and requests for a HTML document. The internet uses HTTP(<em>Hypertext transfer protocol</em>) to request and fetch HTML documents from servers.<br>
+      Servers are just computers but designed to store and transfer HTML documents not like our personal desktop to view the documents.
+  </p>
 
     <div>
       <h2>HTML(Hypertext markup language)</h2>
