--- a/my-first-code.html
+++ b/my-first-code.html
@@ -1,1 +1,10 @@
 html well, why <b>wouldn’t</b> I learn to code?
+<!DOCTYPE html>
+<html>
+<body>
+
+<h1>My First Heading</h1>
+<p>My first paragraph.</p>
+
+</body>
+</html>
